# easy_collections

./: CHANGELOG.md  Cargo.toml  README.md  justfile
src/: lib.rs  map.rs  set.rs
