[package]
name = "easy_collections"
description = "Wrappers around standard collections for ease of use and quick prototyping"
version = "0.3.1"
authors = ["Callum Oz <acheronfail@gmail.com>"]
edition = "2018"
license = "Unlicense OR MIT OR Apache-2.0"
homepage = "https://github.com/acheronfail/easy_collections"
repository = "https://github.com/acheronfail/easy_collections"
keywords = ["map", "set", "operator", "easy", "collection"]

[badges]
is-it-maintained-issue-resolution = { repository = "acheronfail/easy_collections" }
is-it-maintained-open-issues = { repository = "acheronfail/easy_collections" }

[dependencies]
paste = "1.0.4"
